# Cmake-Templet

./: CMakeLists.txt  CMakelists.txt  Makefile  main.cpp
lib/: CMakeLists.txt  Wifi.cpp  Wifi.hpp
src/: calc.cpp
