cmake_minimum_required(VERSION 3.16.3)
project(HELLOAPP)
set(SRC_FILES main.cpp src/calc.cpp)
# message("SRC Files has ${SRC_FILES}")
# message(STATUS "SRC Files has ${SRC_FILES}")
#message(WARNING "SRC Files has ${SRC_FILES}")
#message(FATAL_ERROR "SRC Files has ${SRC_FILES}")
# message("Path is ${CMAKE_SOURCE_DIR}")

add_subdirectory(${CMAKE_SOURCE_DIR}/lib)
# if(EXISTS ${CMAKE_SOURCE_DIR}/main.cpp)
#     message("File Here!")
# else()
#     message(FATAL_ERROR "File Not Here")
# endif()
add_executable(main ${SRC_FILES})
target_link_directories(main PUBLIC include/ lib/)

target_link_libraries(main PUBLIC wifi_lib)
